# DistilbertMicro

./: .dockerignore  .gitignore  Dockerfile  README.md  app-deployment.yaml  app-service.yaml  pyproject.toml
src/: config.yaml
src/dependency_injection/: di.py
src/domain/: exceptions.py
src/entrypoints/: cli.py
src/entrypoints/rest/: api.py  api_impl.py  api_models.py
src/service_layer/: model_manager.py
tests/: conftest.py  test_api.py  test_model_manager.py
