[project]
name = "adevintamicro"
version = "0.0.1"
description = ""
authors = [
    {name = "Oriol Martinez Perez", email = "oriolmartinez314@proton.me"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["fastapi[standard] (>=0.116.1,<0.117.0)", "torch (>=2.7.1,<3.0.0)", "transformers (>=4.53.2,<5.0.0)", "dependency-injector (>=4.48.1,<5.0.0)"]

[tool.poetry]
packages = [{include = "src"}]


# Use torch cpu to lighten image
[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"


[tool.poetry.dependencies]
torch = {source = "pytorch"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
pylint = "^3.3.7"
isort = "^6.0.1"
pytest-asyncio = "^1.1.0"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
